--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "Data Source=DESKTOP-SR1EIQS\\SQLEXPRESS;Initial Catalog=ChatOnDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlCon": "Data Source=localhost,1433;Initial Catalog=testDb;User ID=sa;Password=Test1234567+;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AppSettings": {
     "Token": "my top secret key"
